--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
+    "build": "cp node_modules/modern-normalize/modern-normalize.css ./&&npm run sass",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch index.scss:index.css"
+    "sass": "sass index.scss:index.css"
   },
   "author": "",
   "license": "ISC",
